--- a/home.html
+++ b/home.html
@@ -6,6 +6,21 @@
 	</title>
 </head>
 <body>
-	This Website is used for CUIC Addmission requirement.
-	</body>
+	<div class="main">
+		<div class="logo">
+
+		</div>
+
+		<ul>
+			<li class="active"><a href ="#">Home</a></li>
+			<li ><a href ="#">About Us</a></li>
+			<li ><a href ="#">Team</a></li>
+			<li ><a href ="#">Contact</a></li>
+
+		</ul>
+
+	</div>	
+
+
+</body>
 </html>
